# waypoint_navigator

./: CMakeLists.txt  README.md  package.xml
descriptions/: firefly_base_gps.xacro
include/waypoint_navigator/: waypoint_navigator_node.h
install/: waypoint_navigator.rosinstall
launch/: mav_sim.launch  waypoint_navigator.launch
paths/: trajectory_simple_enu.yaml  trajectory_simple_gps.yaml
paths/paths_old/: trajectory.yaml  trajectory_eschikon_lot4.yaml  trajectory_eschikon_lot4_enu.yaml  trajectory_eschikon_sugarbeet_10m.yaml  trajectory_eschikon_test.yaml  trajectory_eschkion_lot4.yaml  trajectory_gps_sugarbeet.yaml  trajectory_simple_gps1.yaml  trajectory_simple_gps_sugarbeet.yaml  trajectory_sugarbeet1.yaml  trajectory_sugarbeet2.yaml  trajectory_sugarbeet3.yaml  trajectory_sugarbeet4.yaml  trajectory_vicon.yaml  trajectory_zoo_square.yaml  trajectory_zoo_triangle.yaml
src/: waypoint_navigator_node.cpp
srv/: ExecutePathFromFile.srv  GoToHeight.srv  GoToPoseWaypoints.srv  GoToWaypoint.srv  GoToWaypoints.srv
viz/: waypoint_navigator_sim.viz.rviz
